Fixed a text wrap

--- a/src/components/ProjectPage/ProjectPage.module.css
+++ b/src/components/ProjectPage/ProjectPage.module.css
@@ -160,6 +160,7 @@ iframe {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 3rem;
+  text-wrap: nowrap;
 }
 
 .stackList {
